--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body{
     flex-direction: row;
     background: #fff;
     height: 15vh;
-    padding: 1rem;
+    padding: 20px;
+    font-size: larger;
     align-items: center;
     box-shadow: 3px 3px 15px 4px rgba(0,0,0,0.4);
 }
