--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     background: #fff;
     height: 15vh;
     padding: 20px;
-    font-size: larger;
+    font-size: x-large;
     align-items: center;
     box-shadow: 3px 3px 15px 4px rgba(0,0,0,0.4);
 }
