footer size change

--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ button:hover{
     justify-content: right;
 }
 
-footer{
+.headContainer footer{
     font-size: large;
     text-align: center;
 }
