--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a{
 .navList li{
     margin: 0.5rem;
     font-size: small;
-    display: none;
+    display: flex;
 }
 
 .sidebar{
@@ -73,17 +73,6 @@ a{
     display: none;
 }
 
-@media(max-width: 400px){ /*Mobile devices*/
-    .navList li:last-child{
-        display: grid;
-    }
-
-    .sidebar{
-        width: 100vw;
-    }
-
-
-}
 
 .sidebar li:hover{
     background-color: #E5E5E5;
@@ -101,7 +90,7 @@ a{
 #intro{
     display: grid;
     grid-template-rows: 1fr 1fr;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     font-weight: 600;
     font-size: smaller;
@@ -172,8 +161,10 @@ h2{
 }
 
 .projectCards{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
     background-color: #fff;
     border-radius: 20px;
     padding: 10px;
@@ -187,7 +178,7 @@ h2{
     background-size: cover;
     background-position: center;
     border: #E5E5E5 solid 3px;
-    width: 100%;
+    width: 198px;
     height: 41vh;
 }
 
@@ -287,3 +278,78 @@ button:hover{
 #card-4{
     background-image: url("./images/QR-card.png");
 }
+
+.text{
+    padding: 20px;
+}
+
+/* For tablets */
+
+@media(max-width: 800px){
+    .navList li:last-child{
+        display: flex; 
+    }
+
+    .navList{
+        display: flex;
+        margin-left: 60vw;
+    }
+    
+    .navList li{
+        margin: 0.5rem;
+        font-size: small;
+        display: none;
+    }
+
+    .sidebar{
+        width: 100vw;
+    }
+
+    .cards{
+        width: 30vw;
+        height: 41vh;
+    }
+
+    .projectCards{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+}
+
+/* For Mobile Devices */
+
+@media(max-width: 560px){ 
+    .navList li:last-child{
+        display: grid;
+    }
+
+    .navList li{
+        margin: 0.5rem;
+        font-size: small;
+        display: none;
+    }
+
+    .navList{
+        display: flex;
+        margin-left: 30vw;
+    }
+    
+    .sidebar{
+        width: 100vw;
+    }
+
+    .cards{
+        width: 100%;
+        height: 41vh;
+    }
+
+    .projectCards{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+}
+
