--- a/style.css
+++ b/style.css
@@ -171,6 +171,17 @@ h2{
     box-shadow: 3px 3px 15px 4px rgba(0,0,0,0.4);
 }
 
+.profileImageContainer{
+    display: flex;
+    justify-content: center;
+}
+
+#profileImage{
+    background-image: url("./images/Untitled\ design\ \(1\)\ \(1\).png");
+    background-repeat: no-repeat;
+}
+
+
 .cards{
     border-radius: 20px;
     margin: 0.7rem 0;
@@ -294,7 +305,7 @@ button:hover{
         display: flex;
         margin-left: 60vw;
     }
-    
+
     .navList li{
         margin: 0.5rem;
         font-size: small;
@@ -340,16 +351,16 @@ button:hover{
         width: 100vw;
     }
 
-    .cards{
-        width: 100%;
-        height: 41vh;
-    }
-
     .projectCards{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
+    }
+
+    .profileImage img{
+        width: 100%;
+        height: 50vh;
     }
 }
 
